# chipin

./: .gitignore  Cargo.toml  README.md  c.py  package.json  pnpm-lock.yaml
artifacts/stockfair/: .env.example  a.py
artifacts/stockfair/app/: login.tsx
artifacts/stockfair/app/auth/: register.tsx
artifacts/stockfair/components/: WithdrawModal.tsx
artifacts/stockfair/constants/: api.ts  i18n.ts
artifacts/stockfair/context/: RegistrationContext.tsx
artifacts/stockfair/hooks/: useOtp.ts
artifacts/stockfair/lib/api/: client.ts
artifacts/stockfair/lib/auth/: api.ts  tokens.ts  types.ts
bigfinance/: .env.example  Cargo.toml  README.md
bigfinance/src/: config.rs  lib.rs  main.rs  proto.rs  server.rs
bigfinance/src/currency/: converter.rs  currencies.rs  mod.rs  rates.rs
bigfinance/src/defi/: aave.rs  distributor.rs  mod.rs  yield_tracker.rs
bigfinance/src/fees/: calculator.rs  mod.rs
bigfinance/src/oracle/: chainlink.rs  coingecko.rs  mod.rs
bigfinance/src/pipeline/: contribution.rs  market_order.rs  mod.rs  payout.rs  withdrawal.rs
bigfinance/src/revenue/: mod.rs
bigfinance/src/settlement/: mod.rs
motherlode/: .env.example  .env.grpc.example  .gitignore  Cargo.toml  GRPC_DEPS.toml  README.md  build.rs
motherlode/migrations/: 001_users.sql  002_stokvels.sql  003_contributions.sql  004_market.sql  005_wallet.sql  006_fair_score.sql  007_messaging.sql  008_discover.sql  009_investments.sql  010_fraud_security.sql
motherlode/src/: config.rs  errors.rs  main.rs
motherlode/src/db/: mod.rs
motherlode/src/extractors/: auth_user.rs
motherlode/src/grpc/: interceptors.rs  mod.rs  proto.rs  server.rs
motherlode/src/grpc/services/: auth.rs  contributions.rs  fair_score.rs  fraud.rs  market.rs  messages.rs  stokvels.rs  wallet.rs
motherlode/src/handlers/: auth.rs  contributions.rs  discover.rs  fair_score.rs  fraud.rs  investments.rs  market.rs  messages.rs  mod.rs  notifications.rs  stokvels.rs  users.rs  wallet.rs  webhooks.rs
motherlode/src/jobs/: contribution_reminders.rs  fair_score_updater.rs  market_sync.rs  mod.rs  payout_processor.rs  sim_swap_checker.rs
motherlode/src/middleware/: auth.rs  feature_lock.rs  fraud.rs  mod.rs  rate_limit.rs
motherlode/src/models/: contribution.rs  fair_score.rs  fraud.rs  investment.rs  market.rs  message.rs  mod.rs  notification.rs  stokvel.rs  wallet.rs
motherlode/src/notifications/: email.rs  fcm.rs  mod.rs  sms.rs  whatsapp.rs
motherlode/src/payments/: internal.rs  mod.rs  types.rs  ukheshe.rs
motherlode/src/repositories/: contributions.rs  fair_score.rs  fraud.rs  investments.rs  market.rs  messages.rs  mod.rs  notifications.rs  stokvels.rs  users.rs  wallet.rs
motherlode/src/routes/: auth.rs  contributions.rs  discover.rs  fair_score.rs  fraud.rs  investments.rs  market.rs  messages.rs  mod.rs  notifications.rs  stokvels.rs  users.rs  wallet.rs  webhooks.rs
motherlode/src/services/: auth.rs  contributions.rs  discover.rs  fair_score.rs  fraud.rs  investments.rs  kyc.rs  market.rs  messages.rs  mod.rs  sim_swap.rs  stokvels.rs  tax.rs  users.rs  wallet.rs
motherlode/src/utils/: codes.rs  hashing.rs  i18n.rs  jwt.rs  mod.rs  pagination.rs
proto/: README.md  auth.proto  common.proto  contributions.proto  fair_score.proto  fraud.proto  market.proto  messages.proto  stokvels.proto  wallet.proto
speedcrime/: .env.grpc.example  Cargo.toml  GRPC_DEPS.toml  build.rs
speedcrime/src/: main.rs
speedcrime/src/app/screens/: welcome.rs
speedcrime/src/grpc/: channel.rs  mod.rs  proto.rs
speedcrime/src/grpc/clients/: auth.rs  contributions.rs  fair_score.rs  fraud.rs  market.rs  messages.rs  mod.rs  stokvels.rs  wallet.rs
