[package]
name = "speedcrime"
version = "0.1.0"
edition = "2021"
description = "StockFair — GPU-accelerated Blinc frontend"

[[bin]]
name = "speedcrime"
path = "src/main.rs"

[dependencies]
# Blinc UI framework
blinc_app      = { version = "0.1", features = ["windowed", "android"] }
blinc_layout   = "0.1"
blinc_animation = "0.1"
tonic   = { version = "0.12", features = ["transport"] }
prost   = "0.13"

# Async runtime
tokio          = { version = "1", features = ["full"] }

# HTTP client for motherlode
reqwest        = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Secure storage (tokens)
keyring        = "2"

# Internationalization
rust-i18n      = "3"

# Error handling
anyhow         = "1"
thiserror      = "1"

# Logging
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid           = { version = "1", features = ["v4"] }

# Date/time
chrono         = { version = "0.4", features = ["serde"] }
tonic-build = "0.14.5"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"